# barry-io-lakeflow-connector

./: .gitignore  CODEOWNERS  LICENSE  README.md  RELEASE_NOTES.md  SOURCE.md  barry_io_lakeflow.py  connector_spec.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
tests/: test_connector.py
tools/: build_artifact.py
